# Datos-II---Proyecto-1

./: README.md
Proyecto1/: CMakeLists.txt  Client.cpp  Client.h  Compiler.cpp  Compiler.h  configfile  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Server/: CMakeLists.txt  CMemoryPool.cpp  CMemoryPool.h  IMemoryBlock.h  SMemoryChunk.h  Split_getline.h  Variable.cpp  Variable.h  Variable_struct.cpp  Variable_struct.h  configfile  mServer.cpp  main.cpp  tcpServer.cpp  tcpServer.h
build-Proyecto1-Desktop-Debug/: CMakeCache.txt  Makefile  Proyecto1  Proyecto1.cbp  cmake_install.cmake
docsC!/html/: Compiler_8cpp.html  Compiler_8cpp_source.html  Compiler_8h.html  Compiler_8h_source.html  annotated.html  classCompiler-members.html  classCompiler.html  classMainWindow-members.html  classMainWindow.html  classes.html  classnlohmann_1_1basic__json-members.html  classnlohmann_1_1basic__json.html  classnlohmann_1_1byte__container__with__subtype-members.html  classnlohmann_1_1byte__container__with__subtype.html  classnlohmann_1_1detail_1_1binary__reader-members.html  classnlohmann_1_1detail_1_1binary__reader.html  classnlohmann_1_1detail_1_1binary__writer-members.html  classnlohmann_1_1detail_1_1binary__writer.html  classnlohmann_1_1detail_1_1exception-members.html  classnlohmann_1_1detail_1_1exception.html  classnlohmann_1_1detail_1_1file__input__adapter-members.html  classnlohmann_1_1detail_1_1file__input__adapter.html  classnlohmann_1_1detail_1_1input__stream__adapter-members.html  classnlohmann_1_1detail_1_1input__stream__adapter.html  (+291 more)
docsC!/latex/: annotated.tex  (+92 more)
(+873 files in other folders)
